# Fifteen15

./: .clang-format  .gitignore  CMakeLists.txt  Credits.qml  Game.qml  Main.qml  Settings.qml  gamecontrol.cpp  gamecontrol.h  main.cpp
